Fix several dependencie issues Fix issue with Rotated cell being too narrow.

--- a/index.css
+++ b/index.css
@@ -172,7 +172,7 @@ h1, h2, h3, h4 {
 
 .ROTATED_CONTAINER {
     padding-left: 0;
-    padding-right: 0;
+    padding-right: 1em;
     text-align: center;
     vertical-align: bottom;
 }
